--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <!--ログインしていればtrue, していなければfalseを返す-->
+    <% if user_signed_in? %>
+    <!--ログイン済みの場合-->
+      <li>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      </li>
+    <% else %>
+    <!--ログインしていない場合-->
+      <li>
+        <%= link_to "新規登録", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "ログイン", new_user_session_path %>
+      </li>
+    <% end %>
     <%= yield %>
   </body>
 </html>
