--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,22 +9,36 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <!--ログインしていればtrue, していなければfalseを返す-->
-    <% if user_signed_in? %>
-    <!--ログイン済みの場合-->
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-    <!--ログインしていない場合-->
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-    <%= yield %>
+  <body class="header">
+    <header class="bg-dark text-white">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <%= link_to "Behind me", root_path, class: 'navbar-brand text-white' %>
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item"><%= link_to "Home", user_path(current_user.id), class:'fas fa-home nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "Users", users_path, class: 'fas fa-users nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "Lists", lists_path, class: 'fas fa-book-open nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-white' %></li>
+            <% else %>
+              <li class="nav-item"><%= link_to "Home", root_path, class: 'fas fa-home nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "About", home_about_path, class: 'fas fa-link  nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-white' %></li>
+              <li class="nav-item"><%= link_to "login", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-white' %></li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="body">
+      <p class="notice"><%= notice %></p>
+      <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
