[fix] users/index

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,7 @@
   <%= attachment_image_tag list, :image %>
   <p>投稿ユーザー画像：<%= image_tag('sample-author1.jpg') %></p>
   <p>リストタイトル：<%= list.list_title %></p>
-  <p>リスト説明：<%= list.list %></p>
+  <p>リスト説明：<%= list.description %></p>
   <p>ユーザーネーム：<%= list.user.name %></p>
 </div>
 <% end %>
