--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -5,6 +5,6 @@
   <h4>リストタイトル</h4>
   <%= f.text_field :list_title %>
   <h4>リスト説明文</h4>
-  <%= f.text_area :list %>
+  <%= f.text_area :description %>
   <%= f.submit '投稿' %>
 <% end %>
