--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,12 +2,17 @@
 	<div class="row">
 		<div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 			<div class="btn-wrapper col-10 mx-auto">
-				<div class="row">
-				 <%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %>
-				</div>
-				<div class="row">
-				 <%=link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-sm btn-block" %>
-				</div>
+				<% if user_signed_in? %>
+					<%= link_to "My Pageへ", user_path(current_user.id), class: "btn btn-info btn-sm btn-block mb-3" %>
+					<%= link_to "映画リスト一覧へ", lists_path, class: "btn btn-success btn-sm btn-block mb-3" %>
+				<% else %>
+					<div class="row">
+					 <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %>
+					</div>
+					<div class="row">
+					 <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-sm btn-block" %>
+					</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
