--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <%= link_to "Behind me", root_path, class: 'navbar-brand text-dark' %>
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <li class="nav-item"><%= link_to "Home", user_path(current_user.id), class:'fas fa-home nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "MyPage", user_path(current_user.id), class:'fas fa-home nav-link text-dark' %></li>
               <li class="nav-item"><%= link_to "Users", users_path, class: 'fas fa-users nav-link text-dark' %></li>
               <li class="nav-item"><%= link_to "Lists", lists_path, class: 'fas fa-book-open nav-link text-dark' %></li>
               <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-dark' %></li>
