--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
   		<h1>User info</h1>
-  		<a href="">新しい映画リストを作る</a>
+  		<%= render 'info' %>
   	</div>
   	<div class="col-md-8 offset-md-1">
   	  <h2>Users</h2>
