[fix] list/edit 映画リストに映画を追加可能に

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -4,7 +4,26 @@
   <div class="form-group"><label>リスト説明文</label><br>
     <%= f.text_area :description, class: "form-control" %></div>
   <!--ここにコメントのように映画リストを追加する-->
+    <table>
+      <% @list.movies.each do |movie| %>
+        <% movie_user = movie.user %>
+        <tr>
+        	<td><%= movie.title %></td>
+        	<% if current_user == movie_user %>
+          	<td><%= link_to 'Destroy', list_movie_path(movie.list_id, movie.id), class: 'btn-sm btn-danger', method: :delete %></td>
+        	<% end %>
+        </tr>
+      <% end %>
+    </table>
   <div class="actions">
     <%= f.submit '完了', class: "btn btn-success col-xs-12" %>
   </div>
 <% end %>
+<div class="form-group"><label>リスト内容</label></div>
+  <div>
+    <%= form_with model:[@list,@movie], local: true do |f| %>
+      <%= f.text_field :title, size:"90x5" %>
+      <%= f.hidden_field :list_id, value: list.id %>
+      <%= f.submit '追加' %>
+    <% end %>
+  </div>
