--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>リストを作成中</h1>
-      <%= render 'form', list: @list %>
+      <%= render 'form', list: @list, movie: @movie %>
       <%= link_to "Show", list_path(@list), class: "list_#{@list.id}" %> |
       <%= link_to "Back", lists_path, class: "back" %>
     </div>
