--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -18,6 +18,14 @@
             <% end %>
 				  </tr>
 		    </table>
+		    <table>
+    		  <% @list.movies.each do |movie| %>
+    		    <% movie_user = movie.user %>
+    		    <tr>
+    		    	<td><%= movie.title %></td>
+    		    </tr>
+    		  <% end %>
+    		</table>
 		</div>
   </div>
 </div>
