[add] マイページ（ラフ）

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -8,7 +8,7 @@
       <% @list.movies.each do |movie| %>
         <% movie_user = movie.user %>
         <tr>
-        	<td><%= movie.title %></td>
+        	<td>・<%= movie.title %></td>
         	<% if current_user == movie_user %>
           	<td><%= link_to 'Destroy', list_movie_path(movie.list_id, movie.id), class: 'btn-sm btn-danger', method: :delete %></td>
         	<% end %>
@@ -19,11 +19,10 @@
     <%= f.submit '完了', class: "btn btn-success col-xs-12" %>
   </div>
 <% end %>
-<div class="form-group"><label>リスト内容</label></div>
-  <div>
-    <%= form_with model:[@list,@movie], local: true do |f| %>
-      <%= f.text_field :title, size:"90x5" %>
-      <%= f.hidden_field :list_id, value: list.id %>
-      <%= f.submit '追加' %>
-    <% end %>
-  </div>
+<br>
+<div class="form-group"><label>リストに映画を追加</label></div>
+  <%= form_with model:[@list,@movie], local: true do |f| %>
+    <%= f.text_field :title, class: "form-control", placeholder: "映画タイトルをここに記載" %>
+    <%= f.hidden_field :list_id, value: list.id %>
+    <%= f.submit '追加' %>
+  <% end %>
