--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= render 'users/info' %>
+      <%= render 'users/info', user: @list.user %>
 		</div>
 		<div class="col-md-8 offset-md-1">
 		  <h2>List detail</h2>
