--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,1 +1,12 @@
+<table class="table">
+  <tr><%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%></tr>
+  <tr>
+    <th>name</th>
+    <th><%= user.name %></th>
+  </tr>
+  <tr>
+    <th>introduction</th>
+    <th><%= user.introduction %></th>
+  </tr>
+</table>
 <%= link_to "新しい映画リストを作る", new_list_path %>
