--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,19 @@
   <div class="row">
 		<div class="col-md-8 offset-md-4">
 		  <h2>My Page</h2>
+        <div>
+          <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%>
+          <%= @user.name %>
+        </div>
+        <div><%= @user.introduction %></div>
+        <br>
+		  <!--以下は本人の作成したリスト-->
+		  <h5>作成したリスト一覧</h5>
 	      <% @lists.each do |list| %>
           <div>
             <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
             <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
             <p>リスト説明：<%= list.description %></p>
-            <p>ユーザーネーム：<%= list.user.name %></p>
           </div>
         <% end %>
 	  </div>
