--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,6 +12,7 @@
 				    <%= link_to @list.user.name, user_path(@list.user.id) %></td>
 				    <td><%= link_to @list.list_title, list_path(@list.id) %></td>
 				    <td><%= @list.description %></td>
+				    <td class="comments-count">コメント数: <%= @list.list_comments.count %></td>
 				    <% if @list.user_id == current_user.id %>
               <td><%= link_to "Edit", edit_list_path(@list.id), class: "btn-sm btn-success edit_list_#{@list.id}" %></td>
               <td><%= link_to "Destroy", list_path(@list.id), method: :delete, "data-confirm" => "削除しますか？", class: "btn-sm btn-danger destroy_list_#{@list.id}" %></td>
@@ -26,6 +27,7 @@
     		    </tr>
     		  <% end %>
     		</table>
+    		<%= render 'lists/comment', list: @list, list_comment: @list_comment %>
 		</div>
   </div>
 </div>
