--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>BehindMe</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <!--font awesome の導入-->
+    <script src="https://kit.fontawesome.com/cd1c031c48.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -20,15 +21,15 @@
             <%= link_to "Behind me", root_path, class: 'navbar-brand text-dark' %>
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <li class="nav-item"><%= link_to "MyPage", user_path(current_user.id), class:'fas fa-home nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "Users", users_path, class: 'fas fa-users nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "Lists", lists_path, class: 'fas fa-book-open nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "MyPage", user_path(current_user.id), class:'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "Users", users_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "Lists", lists_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
             <% else %>
-              <li class="nav-item"><%= link_to "Home", root_path, class: 'fas fa-home nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "About", home_about_path, class: 'fas fa-link  nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "login", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "Home", root_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "About", home_about_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "login", new_user_session_path, class: 'nav-link text-dark' %></li>
             <% end %>
             </ul>
           </div>
