--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= render 'users/info', user: @list.user %>
-		</div>
-		<div class="col-md-8 offset-md-1">
+		<div class="col-md-8 offset-md-2">
 		  <h2>List detail</h2>
 		    <table class="table">
 				  <tr id="list_<%= @list.id %>">
@@ -13,6 +9,7 @@
 				    <td><%= link_to @list.list_title, list_path(@list.id) %></td>
 				    <td><%= @list.description %></td>
 				    <td class="comments-count">コメント数: <%= @list.list_comments.count %></td>
+				    <td class="like-btn"><%= render "likes/like-btn", list: @list %></td>
 				    <% if @list.user_id == current_user.id %>
               <td><%= link_to "Edit", edit_list_path(@list.id), class: "btn-sm btn-success edit_list_#{@list.id}" %></td>
               <td><%= link_to "Destroy", list_path(@list.id), method: :delete, "data-confirm" => "削除しますか？", class: "btn-sm btn-danger destroy_list_#{@list.id}" %></td>
@@ -26,7 +23,7 @@
     		    	<td><%= movie.title %></td>
     		    </tr>
     		  <% end %>
-    		</table>
+    		</table><br>
     		<%= render 'lists/comment', list: @list, list_comment: @list_comment %>
 		</div>
   </div>
