[add] relationship controller, model

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row">
-		<div class="col-md-8 offset-md-2">
+  	<div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: @list.user %>
+	  </div>
+		<div class="col-md-8 offset-md-1">
 		  <h2>List detail</h2>
 		    <table class="table">
 				  <tr id="list_<%= @list.id %>">
