--- a/app/views/likes/_like-btn.html.erb
+++ b/app/views/likes/_like-btn.html.erb
@@ -1,5 +1,5 @@
 <% if list.liked_by?(current_user) %>
   <%= link_to list.likes.count, list_likes_path(list), method: :delete, class: "fas fa-heart heart_red" %>
 <% else %>
-  <%= link_to list.likes.count, list_likes_path(list), method: :post, class: "fas fa-heart heart_blue" %>
+  <%= link_to list.likes.count, list_likes_path(list), method: :post, class: "far fa-heart heart_none" %>
 <% end %>
