--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row">
-		<div class="col-md-8 offset-md-3">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render 'users/info', user: @user %>
+	  </div>
+		<div class="col-md-8 offset-md-1">
 		  <h2>My Page</h2>
         <div>
           <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%>
