--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,6 +4,14 @@
   <%= f.attachment_field :image %>
   <h4>リストタイトル</h4>
   <%= f.text_field :list_title %>
+  <!--<h4>ジャンル</h4>-->
+  <%= f.label :category, 'ジャンル' %>
+  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category| %>
+    <%= category.label do %>
+      <%= category.check_box %>
+      <%= category.text %>
+    <% end %>
+  <% end %>
   <h4>リスト説明文</h4>
   <%= f.text_area :description %>
   <%= f.submit '投稿' %>
