--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -33,6 +33,30 @@
     		    </tr>
     		  <% end %>
     		</table>
+    		<!--ここに評価機能を実装-->
+    		<%= form_with model: @list, local: true do |f| %>
+    			<!--評価するリストのid-->
+    			<%= f.hidden_field :list_id, { value: @list.id} %>
+    			<!--評価の星-->
+    			<div class="form-group row" id="star">
+  				  <%= f.label :rate,'評価 ', class:'col-md-3 col-form-label' %>
+  				  <%= f.hidden_field :rate, id: :review_star %>
+  				</div>
+  				<!--評価javascript-->
+  				<script>
+  				$('#star').raty({
+  				  size     : 36,
+  				  starOff:  '<%= asset_path('star-off.png') %>',
+  				  starOn : '<%= asset_path('star-on.png') %>',
+  				  starHalf: '<%= asset_path('star-half.png') %>',
+  				  // Listモデルのrateカラムに値を保存する
+  				  scoreName: 'list[rate]',
+  				  // ★半分ok
+  				  half: true,
+  				});
+  				</script>
+  				<%= f.submit '評価する', class:"btn btn-success" %>
+    		<% end %>
     		<table class="list_comments">
     			<h5>コメント一覧</h5>
     			<%= render partial: "lists/comment", locals: { list: @list, list_comment: @list_comment} %>
