--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,6 +19,7 @@
 				    <td><%= @list.description %></td>
 				    <td class="comments-count">コメント数: <%= @list.list_comments.count %></td>
 				    <td class="like-btn_<%= @list.id %>"><%= render partial: "likes/like-btn", locals: { list: @list} %></td>
+				    <td class="favorite-btn_<%= @list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: @list} %></td>
 				    <% if @list.user_id == current_user.id %>
               <td><%= link_to "Edit", edit_list_path(@list.id), class: "btn-sm btn-success edit_list_#{@list.id}" %></td>
               <td><%= link_to "Destroy", list_path(@list.id), method: :delete, "data-confirm" => "削除しますか？", class: "btn-sm btn-danger destroy_list_#{@list.id}" %></td>
