[add]お気に入り一覧いいね一覧

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,36 @@
             </p>
           </div>
         <% end %>
+      <h5>お気に入り一覧</h5>
+        <% if @favorite_list.present? %>
+          <% @favorite_list.each do |list| %>
+            <div>
+              <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+              <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
+              <p>リスト説明：<%= list.description %></p>
+              <p>ジャンル：
+                <% list.categories.each do |category| %>
+						      <%= category.name %>
+						    <% end %>
+              </p>
+            </div>
+          <% end %>
+        <% end %>
+      <h5>いいね一覧</h5>
+        <% if @like_list.present? %>
+          <% @like_list.each do |list| %>
+            <div>
+              <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+              <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
+              <p>リスト説明：<%= list.description %></p>
+              <p>ジャンル：
+                <% list.categories.each do |category| %>
+						      <%= category.name %>
+						    <% end %>
+              </p>
+            </div>
+          <% end %>
+        <% end %>
 	  </div>
 	  </div>
   </div>
