--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -14,5 +14,10 @@
   <% end %>
   <h4>リスト説明文</h4>
   <%= f.text_area :description %>
+
+  <%= f.fields_for :movies do |movie| %>
+    <%= render 'movie-form', f: movie %>
+  <% end %>
+
   <%= f.submit '投稿' %>
 <% end %>
