--- a/app/views/lists/_movie-form.html.erb
+++ b/app/views/lists/_movie-form.html.erb
@@ -1,7 +1,14 @@
 <div class="nested-fields">
-  <p>映画タイトル</p>
+  <div>
+    <%= f.label :title, "映画タイトル" %>
     <%= f.text_field :title, class: "" %>
-  <p>この映画について</p>
+  </div>
+  <div>
+    <%= f.label :impression, "この映画について" %>
     <%= f.text_area :impression, class: "" %>
-  <%= f.hidden_field :user_id, :value => current_user.id %>
+  </div>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+</div>
+<div>
+  
 </div>
