--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -2,7 +2,7 @@
   <%= form_tag(search_path, :method => 'get' ) do %>
     <%= text_field_tag 'search[content]' %>
     <%= select_tag 'search[model]', options_for_select({ "User" => "user", "List" => "list" }) %>
-    <%= select_tag 'search[how]', options_for_select({ "完全一致" => "match", "部分一致" => "partical"  }) %>
+    <%= select_tag 'search[how]', options_for_select({ "部分一致" => "partical", "完全一致" => "match"  }) %>
     <%= submit_tag '検索', class: "btn btn-primary" %>
   <% end %>
 </div>
