--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,31 @@
-<h1>about "Behind me"</h1>
-Behind meを作成するきっかけ等をblahblahblah
-<h1>about me</h1>
-自分についてblahblahblah
+<div class="container">
+    <div class="col-md-8 offset-md-2">
+      <h5 class="text_base">About "Behind me"</h5>
+      <p class="text_base">
+        コロナ禍で、自宅にいる時間が長くなり、サブスクリプションの普及もあって、映画を見る機会が増えた今日この頃。<br><br>
+        いつも同じようなオススメをしてくる機械じゃなくて、あなたのオススメが知りたい！<br><br>
+        そう思ったのは、その人の人生を作ってきた映画はどんなものなのか知りたくなったから。<br>
+        「某怪談語り部のオススメするホラー映画ってどんなものだろう。」<br>
+        「最近結婚したあの友人が最近観たハッピーな映画を観て、自分もハッピーな気持ちになりたい！」<br><br>
+        その人にしかできないオススメがきっとあるはず。<br><br>
+        第７の芸術といわれる映画には、時間芸術も空間芸術も夢も詰まっている。<br>
+        とか堅苦しいことは置いといて、あなたのオススメした1本が他人の人生を変えるかもしれないし、<br>
+        映画を見た後の抑えきれない気持ちを共有してみてもいいかもしれない。<br>
+        「面白い映画知らない？」って聞かれた時、あなたの熱く語れるものをぜひここに。
+      </p>
+    </div>
+    <br>
+    <div class="col-md-8 offset-md-2">
+      <h5 class="text_base">About me</h5>
+      <p class="text_base">
+        高山 寛 | Kan TAKAYAMA<br><br>
+        1996年生まれ。関西学院大学文学部文学言語学科ドイツ文学ドイツ語学専修卒。<br>
+        大学卒業後、米国シアトルに半年留学。<br>
+        自分が作ったものや自分が関わったもので人を助け、そこをポジティブでハッピーな空間にしたい
+        と考え、エンジニアになるためにプログラミングを勉強中。<br>
+        趣味は映画鑑賞、旅行、卓球、スポーツ観戦（特にMLBとNFL）。<br>
+        MARVEL STUDIOSの作品（特にドクター・ストレンジとアイアンマンシリーズ）をこよなく愛していて、
+        最近は流行りのA24に注目している。
+      </p>
+    </div>
+</div>
