--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,19 @@
 <div class="container">
+	<!--スライドショー-->
+	<div id="testbox">
+		<div id="testimages">
+			<div class="testimage1"></div>
+			<div class="testimage2"></div>
+			<div class="testimage3"></div>
+		</div>
+	</div>
 	<div class="row">
 		<div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 			<div class="btn-wrapper col-10 mx-auto">
+
 				<% if user_signed_in? %>
-					<%= link_to "My Pageへ", user_path(current_user.id), class: "btn btn-info btn-sm btn-block mb-3" %>
-					<%= link_to "映画リスト一覧へ", lists_path, class: "btn btn-success btn-sm btn-block mb-3" %>
+					<%= link_to "My Pageへ", user_path(current_user.id), class: "btn btn-md text_base" %>
+					<%= link_to "映画リスト一覧へ", lists_path, class: "btn btn-md text_base" %>
 					<div>
 						<h5>いいねランキング上位</h5>
 							<% @lists.each do |list| %>
@@ -27,12 +36,16 @@
 							<% end %>
 					</div>
 				<% else %>
-					<div class="row">
-					 <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3" %>
+					<div class="">
+
+						<div>
+							<%= link_to "Log in", new_user_session_path, class: "btn btn-sm text_base btn_base" %>
+						</div>
+						<div>
+							<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-sm text_base btn_base" %>
+						</div>
 					</div>
-					<div class="row">
-					 <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-sm btn-block" %>
-					</div>
+
 				<% end %>
 			</div>
 		</div>
