--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
     <!--font awesome の導入-->
     <script src="https://kit.fontawesome.com/cd1c031c48.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "skippr", :media => "all", 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="header">
+  <body class="header bg_base">
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -18,19 +19,19 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <%= link_to "Behind me", root_path, class: 'navbar-brand text-dark' %>
+            <%= link_to "Behind me", root_path, class: 'navbar-brand text_base' %>
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <li class="nav-item"><%= link_to "MyPage", user_path(current_user.id), class:'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "Users", users_path, class: 'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "Lists", lists_path, class: 'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "MyPage", user_path(current_user.id), class:'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "Users", users_path, class: 'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "Lists", lists_path, class: 'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text_base' %></li>
               <li class="nav-item"><%= render 'layouts/search' %></li>
             <% else %>
-              <li class="nav-item"><%= link_to "Home", root_path, class: 'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "About", home_about_path, class: 'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: 'nav-link text-dark' %></li>
-              <li class="nav-item"><%= link_to "login", new_user_session_path, class: 'nav-link text-dark' %></li>
+              <li class="nav-item"><%= link_to "Home", root_path, class: 'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "About", home_about_path, class: 'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: 'nav-link text_base' %></li>
+              <li class="nav-item"><%= link_to "login", new_user_session_path, class: 'nav-link text_base' %></li>
             <% end %>
             </ul>
           </div>
@@ -39,6 +40,10 @@
     </header>
     <div class="body">
       <p class="notice"><%= notice %></p>
+      <!--スライドショーのため（rails用の書き方にする）-->
+      <%= javascript_include_tag 'jquery.min', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'skippr.min', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'script', 'data-turbolinks-track': 'reload' %>
       <%= yield %>
       </div>
     </div>
