--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="header bg_base">
+  <body class="header bg_base text_base">
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
