--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,6 @@
 .testimage3 {
   background-image: image-url("pexels-andrea-piacquadio-3811851.jpg");
 }
-
 // ここからデザイン
 .bg_base {
   background-color:#2d2c38;
@@ -103,7 +102,6 @@
 .response {
   padding-right: 10px;
 }
-
 .rank {
   display: block;
   text-decoration: none;
@@ -111,12 +109,10 @@
   transition: 0.2s;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
-
 .rank:hover {
   background-color: #2d2c38;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
-
 .rank_box {
   display: flex;
   float: left;
@@ -126,30 +122,30 @@
   // width: 400px;
   list-style: none;
 }
-
-// .rank {
-//   width: 32%;
-// }
-
 .rank_img_box {
   width: 320px;
   height: 200px;
 }
-
 .rank_img {
   display: block;
   width: 320px;
   height: 200px;
 }
-
 .rank_title {
   margin: 0;
   // padding: 0 20px 20px;
   font-size: 14px;
 }
-
-// p {
-//   margin: 0;
-//   padding: 20px 20px 5px;
-//   font-size: 10px;
-// }
+.user_pic_box {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100px;
+}
+.user_pic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+}
