--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,8 +1,12 @@
-<table class="table text_base">
+<table class="table table-borderless text_base">
   <tbody>
     <% users.each do |user| %>
       <tr>
-        <td class=""><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></td>
+        <td class="user_index_pic_box">
+          <div class="user_index_pic">
+            <%= attachment_image_tag user, :profile_image, size: "75x75", fallback: "no_image.jpg" %>
+          </div>
+        </td>
         <td><%= user.name %></td>
         <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
       </tr>
