--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,22 +1,25 @@
 <table class="table table-borderless text_base">
   <h3><%= user.name %></h3>
-  <div class="user_pic_box">
+  <div class="user_pic_box ml-5">
     <div class="user_pic">
-      <%= attachment_image_tag user, :profile_image, :fill, 150, 150, fallback: "no_image.jpg" %>
+      <%= attachment_image_tag user, :profile_image, size: "190x190", fallback: "no_image.jpg" %>
     </div>
   </div>
-  <tr>
-    <th>introduction</th>
-    <th><%= user.introduction %></th>
-  </tr>
-  <tr>
-    <th>following</th>
-    <th><%= link_to user.followings.count, user_followings_path(user) %></th>
-  </tr>
-  <tr>
-    <th>followers</th>
-    <th><%= link_to user.followers.count, user_followers_path(user) %></th>
-  </tr>
+  <div class="row mt-2">
+    <div class="col">
+      <div class="text-center">following</div>
+      <div class="ml-5"><%= link_to user.followings.count, user_followings_path(user) %></div>
+    </div>
+    <div class="col">
+      <div class="text-center">followers</div>
+      <div class="ml-5"><%= link_to user.followers.count, user_followers_path(user) %></div>
+    </div>
+  </div>
+  <div class="mt-3">
+    <div></div>
+    <div><%= user.introduction %></div>
+  </div>
+
 </table>
 <div class='row'>
   <% if current_user != user %>
@@ -26,7 +29,9 @@
       <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
     <% end %>
   <% else %>
-    <%= link_to '', edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+    <%= link_to 'Edit My Profile', edit_user_path(user), class: "btn btn-block btn_base text_base edit_user_#{user.id}" %>
   <% end %>
 </div>
-<%= link_to "新しい映画リストを作る", new_list_path %>
+<div class="row">
+  <%= link_to "New List", new_list_path, class:"btn btn-block btn_base text_base mt-1" %>
+</div>
