--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,5 +160,16 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translate(-50%, -45%);
+  transition: all 0.6s ease 0s;
+}
+// .user_index_pic_box:hover {
+//   width: 65px;
+//   height: 65px;
+//   position: relative;
+//   overflow: hidden;
+//   border-radius: 100px;
+// }
+.user_hover:hover {
+  background-color: #22202f;
 }
