--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,14 +1,21 @@
 <table class="table table-borderless text_base">
   <tbody>
     <% users.each do |user| %>
-      <tr>
-        <td class="user_index_pic_box">
-          <div class="user_index_pic">
-            <%= attachment_image_tag user, :profile_image, size: "75x75", fallback: "no_image.jpg" %>
-          </div>
-        </td>
-        <td><%= user.name %></td>
-        <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
+      <tr class="user_hover p-1">
+          <td class="user_index_pic_box">
+          <%= link_to user_path(user.id) do %>
+            <div class="user_index_pic">
+              <%= attachment_image_tag user, :profile_image, size: "75x75", fallback: "no_image.jpg" %>
+            </div>
+          <% end %>
+          </td>
+          <td>
+          <%= link_to user_path(user.id) do %>
+            <div class="text_base">
+              <%= user.name %>
+            </div>
+           <% end %>
+          </td>
       </tr>
     <% end %>
   </tbody>
