--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,11 +8,11 @@
   <div class="row mt-2">
     <div class="col">
       <div class="text-center">following</div>
-      <div class="ml-5"><%= link_to user.followings.count, user_followings_path(user) %></div>
+      <div class="ml-5"><%= link_to user.followings.count, user_followings_path(user), class:"text_base" %></div>
     </div>
     <div class="col">
       <div class="text-center">followers</div>
-      <div class="ml-5"><%= link_to user.followers.count, user_followers_path(user) %></div>
+      <div class="ml-5"><%= link_to user.followers.count, user_followers_path(user), class:"text_base" %></div>
     </div>
   </div>
   <div class="mt-3">
@@ -24,14 +24,15 @@
 <div class='row'>
   <% if current_user != user %>
     <% if current_user.following?(user) %>
-      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+      <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn_base text_base" %>
     <% else %>
-      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn_base text_base" %>
     <% end %>
   <% else %>
     <%= link_to 'Edit My Profile', edit_user_path(user), class: "btn btn-block btn_base text_base edit_user_#{user.id}" %>
-  <% end %>
+
 </div>
 <div class="row">
   <%= link_to "New List", new_list_path, class:"btn btn-block btn_base text_base mt-1" %>
+  <% end %>
 </div>
