--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,59 +1,80 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h2>User info</h2>
       <%= render 'users/info', user: @user %>
 	  </div>
 		<div class="col-md-8 offset-md-1">
-		  <h2>My Page</h2>
-        <div>
-          <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%>
-          <%= @user.name %>
-        </div>
-        <div><%= @user.introduction %></div>
-        <br>
-		  <!--以下は本人の作成したリスト-->
 		  <h5>作成したリスト一覧</h5>
 	      <% @lists.each do |list| %>
-          <div>
-            <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
-            <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
-            <p>リスト説明：<%= list.description %></p>
-            <p>ジャンル：
-              <% list.categories.each do |category| %>
-						    <%= category.name %>
-						  <% end %>
-            </p>
+	      <div class="media mt-3">
+          <div class="d-flex mr-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+          <div class="media-body">
+            <h5 class="mt-0"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+            <% list.categories.each do |category| %>
+			    	  <div class="badge badge-secondary">
+							  <%= category.name %>
+			    	  </div>
+			    	<% end %>
+			    	<div>
+			    		<%= list.description %>
+			    	</div>
+			    	<div class="d-flex">
+			    		<div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+   			  	  <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+			    		<div class="response">コメント：<%= list.list_comments.count %> 件</div>
+			    	</div>
           </div>
+        </div>
         <% end %>
-      <h5>お気に入り一覧</h5>
-        <% if @favorite_list.present? %>
-          <% @favorite_list.each do |list| %>
-            <div>
-              <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
-              <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
-              <p>リスト説明：<%= list.description %></p>
-              <p>ジャンル：
-                <% list.categories.each do |category| %>
-						      <%= category.name %>
-						    <% end %>
-              </p>
-            </div>
+
+        <% if @user == current_user %>
+          <% if @favorite_list.present? %>
+          <h5 class="mt-4">お気に入り一覧</h5>
+            <% @favorite_list.each do |list| %>
+              <div class="media mt-3">
+                <div class="d-flex mr-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+                <div class="media-body">
+                  <h5 class="mt-0"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+                  <% list.categories.each do |category| %>
+			          	  <div class="badge badge-secondary">
+				      			  <%= category.name %>
+			          	  </div>
+			          	<% end %>
+			          	<div>
+			          		<%= list.description %>
+			          	</div>
+			          	<div class="d-flex">
+			          		<div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+   			        	  <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+			          		<div class="response">コメント：<%= list.list_comments.count %> 件</div>
+			          	</div>
+                </div>
+              </div>
+            <% end %>
           <% end %>
-        <% end %>
-      <h5>いいね一覧</h5>
-        <% if @like_list.present? %>
-          <% @like_list.each do |list| %>
-            <div>
-              <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
-              <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
-              <p>リスト説明：<%= list.description %></p>
-              <p>ジャンル：
-                <% list.categories.each do |category| %>
-						      <%= category.name %>
-						    <% end %>
-              </p>
-            </div>
+          <% if @like_list.present? %>
+          <h5 class="mt-4">いいね一覧</h5>
+            <% @like_list.each do |list| %>
+              <div class="media mt-3">
+                <div class="d-flex mr-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+                <div class="media-body">
+                  <h5 class="mt-0"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+                  <% list.categories.each do |category| %>
+			          	  <div class="badge badge-secondary">
+			        			  <%= category.name %>
+			          	  </div>
+			          	<% end %>
+			          	<div>
+			          		<%= list.description %>
+			          	</div>
+			          	<div class="d-flex">
+			          		<div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+   		          	  <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+			          		<div class="response">コメント：<%= list.list_comments.count %> 件</div>
+			          	</div>
+                </div>
+              </div>
+            <% end %>
           <% end %>
         <% end %>
 	  </div>
