--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,14 +4,14 @@
       <table class="table table-bordered category-table">
         <thead>
           <tr>
-            <th>ジャンル</th>
+            <th class="text_base">ジャンル</th>
           </tr>
         </thead>
         <tbody>
         <% @categories.each do |category| %>
           <tr>
             <td>
-              <%= link_to category.name, search_path('search[model]': "list", 'search[content]': category.id, 'search[how]': "match") %>
+              <%= link_to category.name, search_path('search[model]': "list", 'search[content]': category.id, 'search[how]': "match"), class:"text_base" %>
             </td>
           </tr>
         <% end %>
@@ -19,39 +19,47 @@
       </table>
 	  </div>
 	  <div class="col-md-8 offset-md-1">
-	    <h2>Lists</h2>
-	      <% @lists.each do |list| %>
-          <div>
-            <%= attachment_image_tag list, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
-            <p>リストタイトル：<%= link_to list.list_title, list_path(list.id) %></p>
-            <p>ジャンル：
-              <% list.categories.each do |category| %>
-						    <%= category.name %>
-						  <% end %>
-            </p>
-            <!--星評価-->
-             <div id="star-rate-<%= list.id %>">レビュー <%= list.reviews.count %> 件</div>
-              <script>
-              $('#star-rate-<%= list.id %>').raty({
-                size: 36,
-                starOff:  '<%= asset_path('star-off.png') %>',
-                starOn : '<%= asset_path('star-on.png') %>',
-                starHalf: '<%= asset_path('star-half.png') %>',
-                half: true,
-                readOnly: true,
-                // 平均点を算出し、round関数で切り上げ
-                score: "<%= list.reviews.average(:rate).to_f.round(1) %>",
-              });
-              </script>
-            <!--/星評価-->
-            <p>リスト説明：<%= list.description %></p>
-            <p>ユーザーネーム：<%= list.user.name %></p>
-            <p>コメント数：<%= list.list_comments.count %></p>
-            <p class="like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></p>
-            <p class="favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></p>
+      <h2>Lists</h2>
+      <% @lists.each do |list| %>
+        <div class="media mt-3">
+          <div class="d-flex mr-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+          <div class="media-body">
+            <h5 class="mt-0"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+            <div>by <%= list.user.name %></div>
+            <% list.categories.each do |category| %>
+              <div class="badge badge-secondary">
+                <%= category.name %>
+              </div>
+            <% end %>
+              <div>
+                <%= list.description %>
+              </div>
           </div>
+        </div>
+        <div class="d-flex">
+          <div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+          <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+          <div class="response">コメント：<%= list.list_comments.count %> 件</div>
+        </div>
+        <div>
+        <!--星評価-->
+         <div id="star-rate-<%= list.id %>">レビュー <%= list.reviews.count %> 件</div>
+          <script>
+          $('#star-rate-<%= list.id %>').raty({
+            size: 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>',
+            starHalf: '<%= asset_path('star-half.png') %>',
+            half: true,
+            readOnly: true,
+            // 平均点を算出し、round関数で切り上げ
+            score: "<%= list.reviews.average(:rate).to_f.round(1) %>",
+          });
+          </script>
+        <!--/星評価-->
+        </div>
         <% end %>
-	  </div>
+    </div>
   </div>
 </div>
 
