--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,24 @@
   background-image: image-url("pexels-andrea-piacquadio-3811851.jpg");
 }
 // ここからデザイン
+
+h4 {
+  position: relative;
+  padding: 1.5rem;
+  text-align: center;
+}
+
+h4:before {
+  position: absolute;
+  bottom: -10px;
+  left: calc(50% - 30px);
+  width: 60px;
+  height: 5px;
+  content: '';
+  border-radius: 3px;
+  background: #deda6a;
+}
+
 .bg_base {
   background-color:#2d2c38;
 }
@@ -102,16 +120,8 @@
 .response {
   padding-right: 10px;
 }
-.rank {
-  display: block;
-  text-decoration: none;
-  background-color: #22202f;
-  transition: 0.2s;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-}
-.rank:hover {
-  background-color: #2d2c38;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+.top_rank {
+  margin-left: 300px;
 }
 .rank_box {
   display: flex;
@@ -142,6 +152,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 100px;
+  margin-left: 150px;
 }
 .user_pic {
   position: absolute;
@@ -154,7 +165,7 @@
   height: 60px;
   position: relative;
   overflow: hidden;
-  border-radius: 100px;
+  border-radius: 60px;
 }
 .user_index_pic {
   position: absolute;
@@ -163,13 +174,33 @@
   transform: translate(-50%, -45%);
   transition: all 0.6s ease 0s;
 }
-// .user_index_pic_box:hover {
-//   width: 65px;
-//   height: 65px;
-//   position: relative;
-//   overflow: hidden;
-//   border-radius: 100px;
-// }
 .user_hover:hover {
+  text-decoration: none;
   background-color: #22202f;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  border-radius: 20px;
+}
+.user_info {
+  text-decoration: none;
+}
+.user_btn {
+  width: 235px;
+}
+.mypage_list:hover {
+  // background-color: #2d2c38;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  text-decoration: none;
+  background-color: #22202f;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  border-radius: 20px;
+}
+hr {
+  border: none;
+	border-top: solid 1px #d4d3de;
+}
+.list_detail {
+  text-decoration: none;
+  background-color: #22202f;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  border-radius: 20px;
 }
