--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,38 +1,38 @@
 <% if user_signed_in? %>
 <div class="container">
 	<div class="row">
-		<div class="col-sm-4 offset-sm-2">
+		<div class="col-md-3 offset-md-3">
 			<%= link_to "My Pageへ", user_path(current_user.id), class: "btn btn-md text_base btn_base" %>
 		</div>
-		<div class="col-sm-4">
+		<div class="">
 			<%= link_to "映画リスト一覧へ", lists_path, class: "btn btn-md text_base btn_base" %>
 		</div>
 	</div>
 	<div class="text_base mt-3">
-		<h5>いいねランキング上位</h5>
+		<h4 class=""><span>Popular Lists</span></h4>
 			<% @lists.each do |list| %>
-			<ul class="rank_box">
-  			<li class="rank">
-  			  <a href="", class="ranl_items">
-  			    <div class="rank_img_box"><%= attachment_image_tag list, :image, fallback: "no_image.jpg", class:"rank_img" %></div>
-  			    <p class="text_base"><%= list.user.name %></p>
-  			    <h5 class="rank_title"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
-  			    <% list.categories.each do |category| %>
-			    	<div class="badge badge-secondary">
-							  <%= category.name %>
-			    	</div>
-			    	<% end %>
-			    	<div>
-			    		<%= list.description %>
-			    	</div>
-			    	<div class="d-flex">
-			    		<div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
-   			  	  <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
-			    		<div class="response">コメント：<%= list.list_comments.count %> 件</div>
-			    	</div>
-  			  </a>
-  			</li>
-  		</ul>
+				<div class="top_rank mypage_list">
+					<div class="media mt-3">
+      		  <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+      		  <div class="media-body">
+      		    <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+      		    <div>by <%= list.user.name %></div>
+      		    <% list.categories.each do |category| %>
+      		      <div class="badge badge-secondary">
+      		        <%= category.name %>
+      		      </div>
+      		    <% end %>
+      		      <div>
+      		        <%= list.description %>
+      		      </div>
+      		  </div>
+      		</div>
+      		<div class="d-flex ml-3">
+      		  <div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+      		  <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+      		  <div class="response">コメント：<%= list.list_comments.count %> 件</div>
+      		</div>
+      	</div>
 			<% end %>
 	</div>
 </div>
