--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <table class="table table-bordered category-table">
+      <table class="table table-borderless category-table">
         <thead>
           <tr>
             <th class="text_base">ジャンル</th>
@@ -21,42 +21,44 @@
 	  <div class="col-md-8 offset-md-1">
       <h2>Lists</h2>
       <% @lists.each do |list| %>
-        <div class="media mt-3">
-          <div class="d-flex mr-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
-          <div class="media-body">
-            <h5 class="mt-0"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
-            <div>by <%= list.user.name %></div>
-            <% list.categories.each do |category| %>
-              <div class="badge badge-secondary">
-                <%= category.name %>
-              </div>
-            <% end %>
-              <div>
-                <%= list.description %>
-              </div>
+        <div class="mypage_list">
+          <div class="media mt-3">
+            <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+            <div class="media-body">
+              <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
+              <div>by <%= list.user.name %></div>
+              <% list.categories.each do |category| %>
+                <div class="badge badge-secondary">
+                  <%= category.name %>
+                </div>
+              <% end %>
+                <div>
+                  <%= list.description %>
+                </div>
+            </div>
           </div>
-        </div>
-        <div class="d-flex">
-          <div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
-          <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
-          <div class="response">コメント：<%= list.list_comments.count %> 件</div>
-        </div>
-        <div>
-        <!--星評価-->
-         <div id="star-rate-<%= list.id %>">レビュー <%= list.reviews.count %> 件</div>
-          <script>
-          $('#star-rate-<%= list.id %>').raty({
-            size: 36,
-            starOff:  '<%= asset_path('star-off.png') %>',
-            starOn : '<%= asset_path('star-on.png') %>',
-            starHalf: '<%= asset_path('star-half.png') %>',
-            half: true,
-            readOnly: true,
-            // 平均点を算出し、round関数で切り上げ
-            score: "<%= list.reviews.average(:rate).to_f.round(1) %>",
-          });
-          </script>
-        <!--/星評価-->
+          <div class="d-flex ml-3">
+            <div class="response like-btn_<%= list.id %>"><%= render partial: "likes/like-btn", locals: { list: list} %></div>
+            <div class="response favorite-btn_<%= list.id %>"><%= render partial: 'favorites/favorite-btn', locals: { list: list} %></div>
+            <div class="response">コメント：<%= list.list_comments.count %> 件</div>
+          </div>
+          <div>
+          <!--星評価-->
+           <div id="star-rate-<%= list.id %>", class="ml-3">レビュー <%= list.reviews.count %> 件</div>
+            <script>
+            $('#star-rate-<%= list.id %>').raty({
+              size: 36,
+              starOff:  '<%= asset_path('star-off.png') %>',
+              starOn : '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
+              readOnly: true,
+              // 平均点を算出し、round関数で切り上げ
+              score: "<%= list.reviews.average(:rate).to_f.round(1) %>",
+            });
+            </script>
+          <!--/星評価-->
+          </div>
         </div>
         <% end %>
     </div>
