--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,38 +1,39 @@
-<table class="table table-borderless text_base">
-  <h3><%= user.name %></h3>
-  <div class="user_pic_box ml-5">
-    <div class="user_pic">
-      <%= attachment_image_tag user, :profile_image, size: "190x190", fallback: "no_image.jpg" %>
+<div class="user_info pb-3">
+  <table class="table table-borderless text_base">
+    <h3 class="ml-5"><%= user.name %></h3>
+    <div class="user_pic_box">
+      <div class="user_pic">
+        <%= attachment_image_tag user, :profile_image, size: "190x190", fallback: "no_image.jpg" %>
+      </div>
     </div>
-  </div>
-  <div class="row mt-2">
-    <div class="col">
-      <div class="text-center">following</div>
-      <div class="ml-5"><%= link_to user.followings.count, user_followings_path(user), class:"text_base" %></div>
+    <div class="row mt-2">
+      <div class="col">
+        <div class="offset-6">following</div>
+        <div class="offset-9"><%= link_to user.followings.count, user_followings_path(user), class:"text_base" %></div>
+      </div>
+      <div class="col">
+        <div class="">followers</div>
+        <div class="offset-3"><%= link_to user.followers.count, user_followers_path(user), class:"text_base" %></div>
+      </div>
     </div>
-    <div class="col">
-      <div class="text-center">followers</div>
-      <div class="ml-5"><%= link_to user.followers.count, user_followers_path(user), class:"text_base" %></div>
+    <div class="mt-3">
+      <div class="text-center"><%= user.introduction %></div>
     </div>
-  </div>
-  <div class="mt-3">
-    <div></div>
-    <div><%= user.introduction %></div>
-  </div>
 
-</table>
-<div class='row'>
-  <% if current_user != user %>
-    <% if current_user.following?(user) %>
-      <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, class: "btn btn-block btn_base text_base" %>
+  </table>
+  <div class='row justify-content-center'>
+    <% if current_user != user %>
+      <% if current_user.following?(user) %>
+        <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, class: "btn user_btn btn_base text_base" %>
+      <% else %>
+        <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn user_btn btn_base text_base" %>
+      <% end %>
     <% else %>
-      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-block btn_base text_base" %>
-    <% end %>
-  <% else %>
-    <%= link_to 'Edit My Profile', edit_user_path(user), class: "btn btn-block btn_base text_base edit_user_#{user.id}" %>
+      <%= link_to 'Edit My Profile', edit_user_path(user), class: "btn user_btn btn_base text_base edit_user_#{user.id}" %>
 
-</div>
-<div class="row">
-  <%= link_to "New List", new_list_path, class:"btn btn-block btn_base text_base mt-1" %>
-  <% end %>
+  </div>
+  <div class="row justify-content-center">
+    <%= link_to "New List", new_list_path, class:"btn user_btn btn_base text_base mt-1" %>
+    <% end %>
+  </div>
 </div>
